--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background: #8E0E00;
     background: -webkit-linear-gradient(to bottom, #1F1C18, #8E0E00, #1F1C18);
     background: linear-gradient(to bottom, #1F1C18, #00b4b4, #1F1C18);
+    position: relative;
 }
 .subCont{
     min-height: 100vh;
@@ -21,6 +22,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     padding: 55px 0px !important;
+    position: relative;
 }
 
 /* -------------- For ToDo Container -------------- */
@@ -147,6 +149,7 @@ body {
     color: #222222;
     /* background-color: #00b4b4; */
     overflow-x: auto;
+    text-transform: capitalize;
 }
 .editDeleteButtons{
     width: 10%;
@@ -197,6 +200,90 @@ button[type='button']:hover{
 .clearButton:active{
     transform: scale(0.9);
 }
+
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    z-index: 10;
+    backdrop-filter: blur(5px);
+    filter: brightness(0.5);
+}
+.editModal{
+    position: absolute;
+    width: 400px;
+    height: 180px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 20;
+    border-radius: 8px;
+    padding: 15px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.editModal .top{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: #00b4b4; */
+}
+.editModal .top h2{
+    font-size: 2.4rem;
+    font-weight: bold;
+}
+.editModal .top button{
+    border: none;
+    background-color: transparent;
+    padding: 0;
+}
+.editModal .top button i{
+    font-size: 2.4rem;
+    transition: 0.2s;
+}
+.editModal .top button i:hover{
+    color: #00b4b4;
+}
+.editModal .editItem{
+    width: 100%;
+    height: 35px;
+}
+.editModal .editItem .editInput{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    outline: none;
+    border: 0px solid #00b4b4;
+    font-size: 1.9rem;
+    border-radius: 5px;
+    padding: 0px 10px;
+}
+
+.editModalBtn{
+    padding: 0px 15px;
+    background: transparent;
+    font-size: 2.1rem;
+    font-weight: bold;
+    border: 3px solid #00b4b4;
+    border-radius: 8px;
+    color: #00b4b4;
+    letter-spacing: 0.2px;
+    transition: 0.3s;
+}
+.editModalBtn:hover{
+    background-color: #00b4b4;
+    color: #fff;
+}
+.editModalBtn:active{
+    transform: scale(0.9);
+}
+
 
 
 .hide{
